# NBA_Analysis_API

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.fullstack.yaml  render.yaml  requirements.txt
dashboard/: app.py
docker/: entrypoint.sh
sql/: schema.sql
src/nba_analytics/: __init__.py  api_client.py  config.py  db.py  ingestion.py  queries.py
tests/: test_api_client.py  test_ingestion_dates.py
